--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 			
 			.data-element-row {
 				margin: 10px;
-				max-width: 500px;
+				max-width: 560px;
 			}
 
 			.data-element-row input,
 			.data-element-row textarea {
 				width: 100%;
+				padding: 5px;
 			}
 
 			.data-element-row textarea {
@@ -40,7 +41,7 @@
 		     }
 
 			.template {
-				/*display: none;*/
+				display: none;
 			}
 
 			button {
@@ -55,6 +56,41 @@
 				cursor: pointer;
 			}
 		</style>
+
+		<script>
+			
+			Object.prototype.apply = function(obj) {
+				for (var i in obj) {
+					this[i] = obj[i];
+				}
+
+				return this;
+			}
+
+
+			String.format = function() {
+				var args = Array.prototype.slice.call(arguments);
+
+				var str = args[0];
+				if (!args.length || typeof(str) !== 'string') {
+					return '';
+				}
+
+				var map = {};
+				for (var i = 1; i < args.length; i++) {
+					if (typeof(args[i]) === 'object' && args[i] !== null) {
+						map.apply(args[i]);
+					} else {
+						map[i-1] = args[i];
+					}
+				}
+
+				return str.replace(/{([a-zA-Z_. \-\+0-9]+)}/g, function(match, value) { 
+					return map[value] === undefined ? match : map[value];
+				});
+			};
+
+		</script>
 	</head>
 	<body>
 		<div class"data-element-block-title">Target</div>
@@ -70,17 +106,59 @@
 		</div>
 		
 		<div class"data-element-block-title">Variables</div>
-		<div class="template kvp-template data-element-row data-element-row-stacked">
-			<input data-element="key" data-group="{group}" title="Key" placeholder="Key"></input>
-			<input data-element="label" data-group="{group}" title="KVP Label" placeholder="Label"></input>
-			<input type="checkbox" data-group="{group}" id="mask-input-{key}" data-element="mask-input" title="Mask input"></input>
-			<label for="mask-input-{key}">Mask</label>
+		<div>
+			<div class="template kvp-template data-element-row data-element-row-stacked">
+				<input data-element="key" data-group="{group}" title="Key" placeholder="Key"></input>
+				<input data-element="label" data-group="{group}" title="KVP Label" placeholder="Label"></input>
+				<input type="checkbox" data-group="{group}" id="mask-input-{group}" data-element="mask-input" title="Mask input"></input>
+				<label for="mask-input-{group}">Mask</label>
+			</div>
 		</div>
-		<div class="data-element-row"><button>Add new KVP</button></div>
+		<div id="add-new-kvp" class="data-element-row"><button>Add new KVP</button></div>
 		
-		<div class"data-element-block-title">Action</div>
+		<div class"data-element-block-title">Action Script</div>
 		<div class="data-element-row">
-			<textarea data-element="script" title="Script to inject" placeholder="document.getElementById(''"></textarea>
-		</div>		
+			<textarea data-element="script" title="Script to inject" placeholder='var el = document.getElementById;
+
+el("user-signin").value = "{key1}";
+el("pass-signin").value = "{key2}";
+
+el("submit-button").click();
+			'></textarea>
+		</div>
+
+		<script>
+			var makeid = function() {
+			    var text = "";
+			    var possible = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";
+
+			    for( var i=0; i < 5; i++ ) {
+			        text += possible.charAt(Math.floor(Math.random() * possible.length));
+			    }
+
+			    return text;
+			}
+
+
+			var addNewKVPRow = function() {
+				var el = document.getElementsByClassName('kvp-template')[0];
+				
+				var node = document.createElement('x');
+				node.innerHTML = String.format(el.outerHTML, { group: makeid() });
+				
+				var templates = node.getElementsByClassName('template');
+				for (var i = 0; i < templates.length; i++) {
+					templates[i].className = templates[i].className.replace(/\btemplate\b/gi,'');
+				}
+
+				while (node.childNodes.length) {
+					el.parentNode.appendChild(node.firstChild);
+				}
+			}
+
+			addNewKVPRow();
+
+			document.getElementById('add-new-kvp').addEventListener('click', addNewKVPRow);
+		</script>
 	</body>
 </html>
